<resources>
    <string name="app_name">WTMassessment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_the_scoop">Welcome To The Scoop</string>
    <string name="sign_in_to_get_access_to_your_daily_news">Sign in to get access to your daily news</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="hi_there_welcome_to_the_scoop">Hi There!!! Welcome To The Scoop</string>
    <string name="sign_up_to_enjoy_daily_news_and_information">Sign up to enjoy daily news and information.</string>
    <string name="sign_up">SIGN UP</string>
    <string name="pass_word">PASSWORD</string>
    <string name="email_signup">EMAIL</string>
    <string name="full_name">FULL NAME</string>
    <string name="phone_no">PHONE NO</string>
</resources>